Fix tooltips on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -334,6 +334,17 @@ blockquote {
   .motto-wrap { 
     display: none;
   }
+
+  /* Responsive tooltip positioning */
+  .tooltip-tech .tooltiptext-tech {
+    left: 60%;
+    margin-left: -10rem;
+    width: 17rem;
+  }
+
+  .tooltip-tech .tooltiptext-tech::after {
+    left: 55%;
+  }
 }
 
 @media (max-width: 435px) {
